--- a/aprende_java/pubspec.yaml
+++ b/aprende_java/pubspec.yaml
@@ -29,6 +29,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   firebase_core: 
+  cloud_firestore: ^0.9.13
+  firebase_auth:
+  google_sign_in:
+  firebase_storage: ^2.1.0
 
 dev_dependencies:
   flutter_test:
