--- a/aprende_java/pubspec.yaml
+++ b/aprende_java/pubspec.yaml
@@ -28,10 +28,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  generic_bloc_provider: ^1.0.8
   firebase_core: 
   cloud_firestore: ^0.9.13
   firebase_auth:
-  google_sign_in:
+  google_sign_in: 
   firebase_storage: ^2.1.0
 
 dev_dependencies:
