--- a/aprende_java/pubspec.yaml
+++ b/aprende_java/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   firebase_auth:
   google_sign_in: 
   firebase_storage: ^2.1.0
+  liquid_swipe: ^1.2.0
+  smooth_page_indicator: ^0.1.5 
 
 dev_dependencies:
   flutter_test:
