--- a/aprende_java/pubspec.yaml
+++ b/aprende_java/pubspec.yaml
@@ -36,7 +36,8 @@ dependencies:
   google_sign_in: 
   firebase_storage: ^2.1.0
   liquid_swipe: ^1.2.0
-  smooth_page_indicator: ^0.1.5 
+  smooth_page_indicator: ^0.1.5
+  flutter_signin_button: ^2.0.0 
 
 dev_dependencies:
   flutter_test:
