--- a/aprende_java/pubspec.yaml
+++ b/aprende_java/pubspec.yaml
@@ -30,14 +30,14 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   generic_bloc_provider: ^1.0.8
-  firebase_core: 
   cloud_firestore: ^0.9.13
   firebase_auth:
   google_sign_in: 
   firebase_storage: ^2.1.0
   liquid_swipe: ^1.2.0
   smooth_page_indicator: ^0.1.5
-  flutter_signin_button: ^2.0.0 
+  flutter_signin_button: ^2.0.0
+  pull_to_refresh: ^1.6.1 
 
 dev_dependencies:
   flutter_test:
